# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json
backend/: pyproject.toml
backend/app/: auth.py  db.py  documents_store.py  llm.py  main.py  registry.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_db.py  test_documents.py  test_llm.py  test_main.py  test_registry.py
frontend/: AGENTS.md  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppHeader.tsx  AppShell.tsx  ChatPanel.tsx  DisclaimerBanner.tsx  DocumentCreator.tsx  DocumentsHistory.tsx  GenericPdfDocument.tsx  GenericPreview.tsx  LoginScreen.tsx  NDAForm.tsx  NDAPreview.tsx  NdaCreator.tsx  NdaPdfDocument.tsx
frontend/components/auth/: AuthScreen.tsx
frontend/lib/: api.ts  auth.ts  authContext.tsx  chat.ts  documentClient.ts  documentsStore.ts  genericDoc.ts  ndaDefaults.ts  ndaFieldAdapter.ts  ndaText.ts  types.ts
frontend/tests/app/: page.test.tsx
frontend/tests/components/: AuthScreen.test.tsx  ChatPanel.test.tsx  DocumentCreator.test.tsx  DocumentsHistory.test.tsx  LoginScreen.test.tsx  NDAForm.test.tsx  NDAPreview.test.tsx  NdaCreator.test.tsx  NdaPdfDocument.test.tsx
frontend/tests/lib/: api.test.ts  auth.test.ts  chat.test.ts  documentClient.test.ts  documentsStore.test.ts  genericDoc.test.ts  ndaDefaults.test.ts  ndaText.test.ts  (+1 more)
scripts/: start-linux.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
scripts/lib/: start.sh  stop.sh
templates/: LICENSE.txt
