[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "litellm>=1.91.1",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
